<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogInActivity">

<include layout="@layout/main_toolbar"
    android:id="@+id/LoginToolbar"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/UserReservationButton"
           android:onClick="ViewReservations"
           android:text="@string/SeeReservation"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AddReservationButton"
            android:text="@string/AddReservation"
            android:onClick="AddReservation"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DeleteReservationButton"
            android:text="@string/Delete"
            android:onClick="DeleteReservation"/>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>